--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "internet_search_agent"
+name = "internet_search"
 version = "0.1.0"
-description = "An agent that performs internet searches using DuckDuckGo and Google"
+description = "Internet Search Agent for searching and retrieving information"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -18,6 +18,7 @@ dependencies = [
     "termcolor>=1.1.0",
     "duckduckgo-search>=0.6.0",
     "a2a-sdk>=0.2.9",
+    "uvicorn>=0.22.0",
 ]
 
 [tool.uv.sources]
