--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "internet_search"
 version = "0.1.0"
-description = "internet search MCP server"
+description = "internet search agent using MCP"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
