--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "internet_search"
+name = "airbnb_planner_multiagent"
 version = "0.1.0"
-description = "internet search agent using MCP"
+description = "Plan a trip using a multi-agent system communicating over A2A and using MCP"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 dependencies = [
     "click>=8.2.0",
     "geopy>=2.4.1",
@@ -21,7 +21,8 @@ dependencies = [
     "uvicorn>=0.22.0",
     "langchain-community>=0.0.1",
     "langchain-tavily>=0.1.0",
+    "langchain_exa>=0.1.0",
 ]
 
 [tool.uv.sources]
-internet_search = { workspace = true }
+a2a-samples = { workspace = true }
